--- a/chatbot-huong-nghiep/package.json
+++ b/chatbot-huong-nghiep/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "antd": "^5.26.7",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
